src/objects/Exception_Log__c.object
<CustomObject>
    <description>Custom object used to store caught exceptions. Workflow rules can be leveraged to send email alerts upon record creation, and Process Builder can be used to send messages to a Chatter group or user.</description>
    <fields>
        <fullName>Cause__c</fullName>
        <label>Cause</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stack_Trace_String__c</fullName>
        <label>Stack Trace String</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_Name__c</fullName>
        <label>Type Name</label>
        <picklist>
            <picklistValues>
                <fullName>AsyncException</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CalloutException</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DmlException</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EmailException</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InvalidParameterValueException</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LimitException</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JSONException</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ListException</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MathException</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NoAccessException</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NoDataFoundException</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NoSuchElementException</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NullPointerException</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QueryException</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RequiredFeatureMissing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SearchException</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SecurityException</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SerializationException</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SObjectException</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>StringException</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TypeException</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VisualforceException</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XmlException</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Exception Log</label>
    <listViews>
        <fullName>All_Exceptions</fullName>
        <columns>NAME</columns>
        <columns>Cause__c</columns>
        <columns>Line_Number__c</columns>
        <columns>Message__c</columns>
        <columns>Stack_Trace_String__c</columns>
        <columns>Type_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Exceptions</label>
    </listViews>
    <nameField>
        <displayFormat>E-{000000}</displayFormat>
        <label>Exception Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>